Code rework